# template-automl

./: README.md  pyproject.toml
.claude/skills/logo/: SKILL.md  make_logo.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: lint.yml  validate.yml
projects/document_prediction/: example.ipynb  pyproject.toml
projects/image_prediction/: example.ipynb  pyproject.toml
projects/image_segmentation/: example.ipynb  pyproject.toml
projects/multimodal_prediction/: example.ipynb  pyproject.toml
projects/object_detection/: example.ipynb  pyproject.toml
projects/semantic_matching/: example.ipynb  pyproject.toml
projects/tabular/: example.ipynb  pyproject.toml
projects/text_prediction/: example.ipynb  pyproject.toml
projects/timeseries/: example.ipynb  pyproject.toml
