[project]
name = "template-automl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.4.5",
    "mlflow>=3.1.4",
    "pydantic-settings>=2.10.1",
]

[tool.uv.workspace]
members = [
    "projects/document_prediction",
]
