[project]
name = "timeseries"
version = "0.1.0"
description = "Timeseries Prediction with Autogluon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogluon.timeseries>=1.5.0",
    "prophet",
    "statsmodels",
    "tslearn",
    "tsfel",
    "neuralforecast",
    "mlforecast",
    "statsforecast",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
